--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="wrapper">
             <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="carousel">
-                <li class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
+                <li class="card" id="quiropidia" onclick="showDescription('quiropidia')">
                     <div class="circle">
                         <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
                     </div>
@@ -148,7 +148,7 @@
         </div>
 
         <!-- Card para mostrar la descripción de la especialitat seleccionada -->
-        <div class="description-card" id="descripcion-card">
+        <div class="description-card" id="descripcion-card" style="display: none;">
             <div id="quiropidia-description" class="description active">
                 <div class="description-text">
                     <h4>Quiropidia</h4> <br>
