Agrega tooltip del delivery

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
                 </ul>
             </nav>
         </header>
-
+      
+        <div class="delivery-container">
+          <span class="tooltip">Servei de podologia a domicili!</span>
+          <span class="delivery-text">
+            <div class="borde-back">
+              <div class="icon">
+                <img src="images/scooter.png" alt="delivery icon">
+                </svg>
+              </div>
+            </div>
+          </span>
+        </div>
+        
         <main>
             <section id="hero">
                 <h2>
