Agrega favicon y gif para el tooltip

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Títol de la Pàgina</title>
     <link rel="stylesheet" href="css/main.css"> <!-- Enlace al archivo CSS -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -30,8 +30,7 @@
             <span class="delivery-text">
                 <div class="borde-back">
                     <div class="icon">
-                        <img src="images/scooter.png" alt="delivery icon">
-                        </svg>
+                        <img src="images/scooter.gif" alt="delivery icon" class="delivery-icon">
                     </div>
                 </div>
             </span>
