Cambia flechas carusel, Agrega underline al titulo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Títol de la Pàgina</title>
     <link rel="stylesheet" href="css/main.css"> <!-- Enlace al archivo CSS -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 </head>
 
@@ -20,7 +22,7 @@
                     <li><a href="#especialitats">Especialitats</a></li>
                     <li><a href="#ortopedia">Ortopèdia</a></li>
                     <li><a href="#mutues">Mutues</a></li>
-                    <li><a href="#contacte">Contacte</a></li>
+                    <li><a href="#footer-service">Contacte</a></li>
                 </ul>
             </nav>
         </header>
@@ -41,6 +43,7 @@
                 <h2>
                     Els teus peus, la base del
                     teu equilibri i benestar
+                    <img src="images/underline.png" alt="Foto decorativa" class="underline">
                 </h2>
                 <p>Utilitzem tecnologia avançada i coneixements actualitzats per diagnosticar i tractar
                     els teus peus. Escollir-nos és optar per un enfocament integral que prioritza
@@ -79,7 +82,7 @@
             <h2>ESPECIALITATS</h2>
         </div>
         <div class="wrapper">
-            <i id="left" class="fa-solid fa-angle-left"></i>
+            <i id="left" class="fa-solid fa-arrow-left"></i>
             <ul class="carousel">
                 <li class="card" id="quiropidia" onclick="showDescription('quiropidia')">
                     <div class="circle">
@@ -156,7 +159,7 @@
                     </div>
                 </li>
             </ul>
-            <i id="right" class="fa-solid fa-angle-right"></i>
+            <i id="right" class="fa-solid fa-arrow-right"></i>
         </div>
 
         <!-- Card para mostrar la descripción de la especialitat seleccionada -->
@@ -292,12 +295,6 @@
                 <img src="mutues/vivaz.png" alt="Logo Vivaz" class="mutue-logo">
                 <img src="mutues/mutuacat.png" alt="Logo Mutuacat" class="mutue-logo">
             </div>
-        </div>
-    </section>
-
-    <section id="contacte">
-        <div class="contacte-box">
-            <h2>CONTACTE</h2>
         </div>
     </section>
 
