Agrega funcion para ocultar header en inactividad

--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
                     <p><img src="images/tic.png"> Donar resposta mitjançant tècniques diagnòstiques i tractaments
                         adequats.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
+                    <img class="podologia-img" src="images/podologia.png" alt="Descripción Podología" class="description-image">
                 </div>
-                <img class="podologia-img" src="images/podologia.png" alt="Descripción Podología"
-                    class="description-image">
             </div>
             <div id="piediabetico-description" class="description">
                 <div class="description-text">
