Agrega boton para el header en pantallas chicas, mejora responsividad

--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
         </div>
 
         <main>
+            <div class="mobile-header">
+                <img src="images/logo.jpeg" alt="Logo La Devesa" class="logo">
+                <button class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+            <div class="side-menu">
+                <button class="close-btn">
+                    <span>&#10005;</span> <!-- Símbolo de la cruz -->
+                </button>
+                <ul>
+                    <li><a href="#hero">Inici</a></li>
+                    <li><a href="#especialitats">Especialitats</a></li>
+                    <li><a href="#ortopedia">Ortopèdia</a></li>
+                    <li><a href="#mutues">Mutues</a></li>
+                    <li><a href="#footer-service">Contacte</a></li>
+                </ul>
+            </div>
+
             <section id="hero">
                 <h2>
                     Els teus peus, la base del
@@ -172,8 +193,8 @@
                         a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin
                         en
                         altres de més rellevància.</p>
-                    <button class="CTA">Contacta't amb nosaltres</button>
-                </div>
+                        <button class="CTA">Contacta't amb nosaltres</button>
+                    </div>
                 <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
             </div>
             <div id="exploracio-description" class="description">
@@ -320,7 +341,7 @@
                     <li><a href="#">Enllaç 4</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer-section" id="footer-map">
                 <h3>Direcció</h3>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1246.9374193772633!2d2.812279767314603!3d41.984526933956545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bae72202ba0515%3A0x8d32d6272a8902c0!2sCarrer%20Joaquim%20Vayreda%2C%2065%2C%2017001%20Girona%2C%20Spain!5e0!3m2!1sen!2sar!4v1729975340613!5m2!1sen!2sar"
