Implementa responsividad en moviles en el inicio

--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
                 </p>
 
                 <div class="contact-container">
+
                     <button class="CTA">Contacte amb nosaltres</button>
-                    <div class="phone-box">
-                        <img src="images/telefon.png" alt="Teléfon" class="phone-icon">
+
+                    <div class="contact-content">
+                        <div class="phone-box">
+                            <img src="images/telefon.png" alt="Teléfon" class="phone-icon">
+                        </div>
+                        <div class="phone-info">
+                            <span class="phone-label">Telèfon</span>
+                            <span class="phone-number">972 20 77 16</span>
+                        </div>
                     </div>
-                    <div class="phone-info">
-                        <span class="phone-label">Telèfon</span>
-                        <span class="phone-number">972 20 77 16</span>
-                    </div>
+
                 </div>
 
             </section>
@@ -193,8 +198,8 @@
                         a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin
                         en
                         altres de més rellevància.</p>
-                        <button class="CTA">Contacta't amb nosaltres</button>
-                    </div>
+                    <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
                 <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
             </div>
             <div id="exploracio-description" class="description">
@@ -246,7 +251,8 @@
                     <p><img src="images/tic.png"> Donar resposta mitjançant tècniques diagnòstiques i tractaments
                         adequats.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
-                    <img class="podologia-img" src="images/podologia.png" alt="Descripción Podología" class="description-image">
+                    <img class="podologia-img" src="images/podologia.png" alt="Descripción Podología"
+                        class="description-image">
                 </div>
             </div>
             <div id="piediabetico-description" class="description">
@@ -260,10 +266,10 @@
                         <br>
                         Cura del peu diabètic i tractament preventiu d’úlceres vasculars i neuropàtiques.
                         <br>
-                
-                        <p class="tic"><img src="images/tic.png"> Adscrita en el PEU DIABÈTIC del CATSALUT desde el 2009.
-                        </p>
-                
+
+                    <p class="tic"><img src="images/tic.png"> Adscrita en el PEU DIABÈTIC del CATSALUT desde el 2009.
+                    </p>
+
                     </p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
