Ajusta responsividad en seccion especialidades

--- a/index.html
+++ b/index.html
@@ -105,6 +105,78 @@
         <div class="especialitats-box">
             <h2>ESPECIALITATS</h2>
         </div>
+        <div class="cards-mobile">
+            <div class="card" id="quiropidia" onclick="showDescription('quiropidia')">
+                <div class="circle">
+                    <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
+                </div>
+                <h3>Quiropidia</h3>
+                <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
+                    d'alteracions a les
+                    ungles dels peus.</p>
+                <div class="ver-mas">
+                    <span class="ver-mas-text">Veure més</span>
+                    <span class="ver-menos-text">Veure menys</span>
+                </div>
+            </div>
+
+            <div class="card" id="exploracio" onclick="showDescription('exploracio')">
+                <div class="circle">
+                    <img src="images/exploracio-icon.png" alt="exploracio" class="circle-icon">
+                </div>
+                <h3>Exploració Biomecànica</h3>
+                <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
+                    seus
+                    moviments.</p>
+                <div class="ver-mas">
+                    <span class="ver-mas-text">Veure més</span>
+                    <span class="ver-menos-text">Veure menys</span>
+                </div>
+            </div>
+
+            <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
+                <div class="circle">
+                    <img src="images/ortopodologia-icon.png" alt="ortopodologia" class="circle-icon">
+                </div>
+                <h3>Ortopodologia</h3>
+                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
+                    durant la
+                    marxa.</p>
+                <div class="ver-mas">
+                    <span class="ver-mas-text">Veure més</span>
+                    <span class="ver-menos-text">Veure menys</span>
+                </div>
+            </div>
+
+            <div class="card" id="podologia" onclick="showDescription('podologia')">
+                <div class="circle">
+                    <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
+                </div>
+                <h3>Podología</h3>
+                <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les
+                    malalties i
+                    alteracions que afecten el peu.</p>
+                <div class="ver-mas">
+                    <span class="ver-mas-text">Veure més</span>
+                    <span class="ver-menos-text">Veure menys</span>
+                </div>
+            </div>
+
+            <div class="card" id="piediabetico" onclick="showDescription('piediabetico')">
+                <div class="circle">
+                    <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
+                </div>
+                <h3>Peu Diabétic</h3>
+                <p>És una complicació de la diabetis que es caracteritza per la infecció, ulceració o destrucció
+                    dels teixits
+                    del peu.</p>
+                <div class="ver-mas">
+                    <span class="ver-mas-text">Veure més</span>
+                    <span class="ver-menos-text">Veure menys</span>
+                </div>
+            </div>
+        </div>
+
         <div class="wrapper">
             <i id="left" class="fa-solid fa-arrow-left"></i>
             <ul class="carousel">
