Ajusta la muestra de descripciones en dispositivos mobiles

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2>ESPECIALITATS</h2>
         </div>
         <div class="cards-mobile">
-            <div class="card" id="quiropidia" onclick="showDescription('quiropidia')">
+            <div class="card" id="quiropidia" onclick="showDescriptionMobile('quiropidia')">
                 <div class="circle">
                     <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
                 </div>
@@ -118,9 +118,12 @@
                     <span class="ver-mas-text">Veure més</span>
                     <span class="ver-menos-text">Veure menys</span>
                 </div>
+
+                <div class="description-container"></div>
+            
             </div>
 
-            <div class="card" id="exploracio" onclick="showDescription('exploracio')">
+            <div class="card" id="exploracio" onclick="showDescriptionMobile('exploracio')">
                 <div class="circle">
                     <img src="images/exploracio-icon.png" alt="exploracio" class="circle-icon">
                 </div>
@@ -132,9 +135,12 @@
                     <span class="ver-mas-text">Veure més</span>
                     <span class="ver-menos-text">Veure menys</span>
                 </div>
+
+                <div class="description-container"></div>
+
             </div>
 
-            <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
+            <div class="card" id="ortopodologia" onclick="showDescriptionMobile('ortopodologia')">
                 <div class="circle">
                     <img src="images/ortopodologia-icon.png" alt="ortopodologia" class="circle-icon">
                 </div>
@@ -146,9 +152,12 @@
                     <span class="ver-mas-text">Veure més</span>
                     <span class="ver-menos-text">Veure menys</span>
                 </div>
+
+                <div class="description-container"></div>
+
             </div>
 
-            <div class="card" id="podologia" onclick="showDescription('podologia')">
+            <div class="card" id="podologia" onclick="showDescriptionMobile('podologia')">
                 <div class="circle">
                     <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
                 </div>
@@ -160,9 +169,12 @@
                     <span class="ver-mas-text">Veure més</span>
                     <span class="ver-menos-text">Veure menys</span>
                 </div>
+
+                <div class="description-container"></div>
+
             </div>
 
-            <div class="card" id="piediabetico" onclick="showDescription('piediabetico')">
+            <div class="card" id="piediabetico" onclick="showDescriptionMobile('piediabetico')">
                 <div class="circle">
                     <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
                 </div>
@@ -174,6 +186,7 @@
                     <span class="ver-mas-text">Veure més</span>
                     <span class="ver-menos-text">Veure menys</span>
                 </div>
+                <div class="description-container"></div>
             </div>
         </div>
 
