Cambia imagenes png a webp

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
             </section>
 
             <div class="profile-card">
-                <img src="images/profile.png" alt="Foto de Beth Samitier" class="profile-image">
+                <img src="images/profile.webp" alt="Foto de Beth Samitier" class="profile-image">
                 <div class="profile-info">
                     <h3 class="profile-name">Beth Samitier i Rubió</h3>
                     <p class="profile-job">
                         <span class="violet">Podòloga i Tecnica en Ortopedia | </span>
                         <span class="orange">N° COL·LEGIADA 1185</span>
                     </p>
-                    <p class="profile-description">Tractament de podologia de primera qualitat realitzat<br>
+                    <p class="profile-description">Tractament de podologia de primera qualitat realitzat
                         per experts de camp, molt recomanable per a tothom.</p>
                 </div>
             </div>
@@ -279,11 +279,10 @@
                     <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
                         alteracions
                         a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin
-                        en
-                        altres de més rellevància.</p>
+                        en altres de més rellevància.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
+                <img src="images/quiropidia.webp" alt="Descripción Quiropidia" class="description-image active">
             </div>
             <div id="exploracio-description" class="description">
                 <div class="description-text">
@@ -294,21 +293,20 @@
                     </p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Exploracio Biomecànica" class="description-image">
+                <img src="images/quiropidia.webp" alt="Descripción Exploracio Biomecànica" class="description-image">
             </div>
             <div id="ortopodologia-description" class="description">
                 <div class="description-text">
                     <h4>Ortopodologia</h4> <br>
                     <p>L'ortopodologia es basa en el tractament de les alteracions mecàniques del peu, és a dir, de les
                         alteracions que influeixen en la funció correcta del peu durant la marxa. El tractament
-                        d’aquestes
-                        alteracions és mitjançant:</p>
+                        d’aquestes alteracions és mitjançant:</p>
                     <h5>Per què triar-nos?</h5> <br>
                     <p class="tic"><img src="images/tic.png"> Plantilles ortopèdiques a mida.</p>
                     <p><img src="images/tic.png"> Órtesis de silicona. </p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/plantillas-ortopedicas.png" alt="Descripción ortopodologia" class="description-image">
+                <img src="images/plantillas-ortopedicas.webp" alt="Descripción ortopodologia" class="description-image">
             </div>
             <div id="podologia-description" class="description">
                 <div class="description-text">
@@ -334,7 +332,7 @@
                     <p><img src="images/tic.png"> Donar resposta mitjançant tècniques diagnòstiques i tractaments
                         adequats.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
-                    <img class="podologia-img" src="images/podologia.png" alt="Descripción Podología"
+                    <img class="podologia-img" src="images/podologia.webp" alt="Descripción Podología"
                         class="description-image">
                 </div>
             </div>
@@ -356,7 +354,7 @@
                     </p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/piediabetico.png" alt="Descripción pie diabetico" class="description-image">
+                <img src="images/piediabetico.webp" alt="Descripción pie diabetico" class="description-image">
             </div>
 
         </div>
@@ -379,8 +377,7 @@
                 </p>
             </div>
             <div class="image-wrapper">
-                <img src="images/ortopedia.png" alt="Solucions Ortopèdiques" class="ortopedia-image">
-                <!--  <div class="image-background"></div>  -->
+                <img src="images/ortopedia.webp" alt="Solucions Ortopèdiques" class="ortopedia-image">
             </div>
         </div>
     </section>
