--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Títol de la Pàgina</title>
-    <link rel="stylesheet" href="css/main.css"> <!-- Enlace al archivo CSS -->
+    <link rel="stylesheet" href="css/main.css"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -49,7 +49,7 @@
             </div>
             <div class="side-menu">
                 <button class="close-btn">
-                    <span>&#10005;</span> <!-- Símbolo de la cruz -->
+                    <span>&#10005;</span> <!-- Símbolo cruz -->
                 </button>
                 <ul>
                     <li><a href="#hero">Inici</a></li>
@@ -204,7 +204,6 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                        <!-- Flecha derecha -->
                     </div>
                 </li>
 
@@ -219,7 +218,6 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                        <!-- Flecha derecha -->
                     </div>
                 </li>
 
@@ -234,7 +232,6 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                        <!-- Flecha derecha -->
                     </div>
                 </li>
 
@@ -249,7 +246,7 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                        <!-- Flecha derecha -->
+                     
                     </div>
                 </li>
 
@@ -264,7 +261,6 @@
                     <div class="ver-mas">
                         <span class="ver-mas-text">Veure més</span>
                         <span class="ver-menos-text">Veure menys</span>
-                        <!-- Flecha derecha -->
                     </div>
                 </li>
             </ul>
